gtk/gtkstylecontext.c
@@ -187,7 +187,11 @@ gtk_style_context_real_changed (GtkStyleContext *context)
   GtkStyleContextPrivate *priv = context->priv;
 
   if (GTK_IS_CSS_WIDGET_NODE (priv->cssnode))
-    _gtk_widget_style_context_invalidated (gtk_css_widget_node_get_widget (GTK_CSS_WIDGET_NODE (priv->cssnode)));
+    {
+      GtkWidget *widget = gtk_css_widget_node_get_widget (GTK_CSS_WIDGET_NODE (priv->cssnode));
+      if (widget != NULL)
+        _gtk_widget_style_context_invalidated (widget);
+    }
 }
 
 static void
@@ -522,7 +526,8 @@ gtk_style_context_push_state (GtkStyleContext *context,
     {
       GtkWidget *widget = gtk_css_widget_node_get_widget (GTK_CSS_WIDGET_NODE (root));
       g_debug ("State %u for %s %p doesn't match state %u set via gtk_style_context_set_state ()",
-               state, gtk_widget_get_name (widget), widget, gtk_css_node_get_state (priv->cssnode));
+               state, (widget == NULL) ? "(null)" : gtk_widget_get_name (widget),
+               widget, gtk_css_node_get_state (priv->cssnode));
     }
   else
     {
